--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,6 @@
 @import url(common.css);
 @import url(header.css);
 @import url(promo.css);
+@import url(invitation.css);
+@import url(parents.css);
 @import url(footer.css);
