--- a/css/promo.css
+++ b/css/promo.css
@@ -18,7 +18,6 @@
 
 .promo-title {
   font-size: 70px;
-  font-weight: 400;
   line-height: 90px;
 }
 
@@ -30,7 +29,7 @@
 
 @media (max-width: 991.98px) {
   .promo-content {
-    padding-top: 210px;
+    padding-top: 240px;
     font-size: 18px;
   }
 
@@ -43,5 +42,9 @@
 @media (max-width: 767.98px) {
   .promo {
     height: 660px;
+  }
+
+  .promo-content {
+    padding-top: 210px;
   }
 }
