--- a/css/common.css
+++ b/css/common.css
@@ -49,22 +49,17 @@ body {
   padding: 0 15px;
 }
 
-
 .title {
   font-family: 'Ultra', serif;
   font-weight: 400;
 }
 
-
 @media (max-width: 991.98px) {
   body {
     font-size: 16px;
-   
   }
 }
 
-@media (max-width: 767.98px) {
- 
-}
+@media (max-width: 767.98px) {}
 
 @media (max-width: 479.98px) {}
