added max-width for .invitation-text in @media 479.98

--- a/css/invitation.css
+++ b/css/invitation.css
@@ -19,3 +19,11 @@
     font-size: 16px;
   }
 }
+
+@media (max-width: 479.98px) {
+  .invitation-text {
+    max-width: 280px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
